# secagent

./: .env.example  .gitignore  README.md  TODOS.md  docker-compose.yml  pyproject.toml  recon.db  recon.html  recon_v0.py  requirements.txt
evals/: hypothesize_eval.py
secagent/: allowlist.py  annotate.py  capture.py  cli.py  env.py  hunter.py  normalize.py  recon.py  report.py  scorer.py  session.py  status.py  store.py
tests/: test_allowlist.py  test_annotate.py  test_capture.py  test_cli.py  test_env.py  test_eval.py  test_fixtures.py  test_hunter.py  test_normalize.py  test_report.py  test_scorer.py  test_session.py  test_store.py
tests/fixtures/: juiceshop_session.json  lab_banner_missing.html  lab_banner_notsolved.html  lab_banner_solved.html
