[project]
name = "secagent"
version = "0.2.0"
description = "Black-box web security agent (v1: attack-surface mapper; v2: autonomous hunter for PortSwigger labs)"
requires-python = ">=3.13"
dependencies = [
    "playwright==1.60.0",
]

[project.scripts]
secagent = "secagent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "langgraph>=0.2",   # tests drive the real (sync) hunt graph with fakes
]
# LLM page-understanding (annotate) + the v2 hunter's reasoning. Optional: the
# package imports and the v1 capture pipeline run without it; only `secagent
# annotate` and `secagent hunt` need it + ANTHROPIC_API_KEY.
llm = [
    "anthropic>=0.40",
]
# v2 hunter orchestration (sync LangGraph state machine). Needed by `secagent
# hunt`; the rest of the package imports without it.
agent = [
    "langgraph>=0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["secagent*"]
